<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Verify">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/sh_bg_header_cobaltblue">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/verifying_your_account"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="24sp"/>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:layout_marginHorizontal="30dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_the_6_digit_code_sent_to_your_email"
            android:textColor="@color/cobalt_blue"
            android:textSize="16sp"
            android:layout_marginBottom="20dp"
            android:gravity="center"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/Verification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="clear_text"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:background="@drawable/se_bg_edt_cobaltblue"
                android:inputType="number"
                android:maxLength="6"
                android:hint="@string/verification_code"
                android:paddingHorizontal="16dp"
                android:textColorHint="@color/steel_teal"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/VerifyBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/sh_bg_btn_paoloveronesegreen"
            android:text="@string/verify"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/Resend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/didn_t_receive_the_code_resend"
            android:textColor="@color/mantis"
            android:textSize="14sp"
            android:textStyle="bold"/>
    </LinearLayout>

</FrameLayout>
